# validacion-algoritmo-roturas-PDI

./: README.md  dmg_im.py  dmg_img.ipynb  dmg_vid.ipynb  dmg_vid.py  dmg_vid0.py  evaluation.py  interfaz.py
Algoritmo_Canny/: CMakeLists.txt  main.cpp
Algoritmo_Kmeans/: CMakeLists.txt  main.cpp
CorreccionDeRuido/: OpenCV.cpp  main.cpp
DetectorBordesSobel/: main.cpp
test/: Readme.txt
